[metadata]
name = pychart-miningape
version = 0.0.0
author = Test
author_email = test@test.com
description = test
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/miningape/pychart
project_urls =
    Bug Tracker = https://github.com/miningape/pychart/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
