[metadata]
name = pychart-lang
version = attr: pychart.__version__
author = 'Kyle Craig Johnson, Daniel Lyakhovich, Jacob Paw Moeler, Arda Onal, Eren Polat, Robert Spralja'
author_email = miningape@gmail.com
description = Pychart is a programming language implemented in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/miningape/pychart
project_urls =
    Bug Tracker = https://github.com/miningape/pychart/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pychart = pychart.__main__:main
